# Sharp-PQ

./: CMakeLists.txt  README.md
depends/libff/libff/algebra/fields/prime_base/: fields_64.hpp  fp_64.hpp  fp_64.tcc
range_proof/: CMakeLists.txt
range_proof/algebra/: exponentiation.hpp  exponentiation.tcc  fft.hpp  fft.tcc  parallel_random_element.cpp  utils.cpp  utils.hpp  utils.tcc
range_proof/algebra/field_subset/: basis_utils.hpp  basis_utils.tcc  field_subset.hpp  field_subset.tcc  subgroup.hpp  subgroup.tcc  subspace.hpp  subspace.tcc
range_proof/algebra/polynomials/: linearized_polynomial.hpp  linearized_polynomial.tcc  polynomial.hpp  polynomial.tcc  vanishing_polynomial.hpp  vanishing_polynomial.tcc
range_proof/bcs/: Newmerkle.hpp  Newmerkle.tcc  hash_packing.hpp  hash_packing.tcc
range_proof/common/: common.cpp  common.hpp
range_proof/iop/: iop.hpp  iop.tcc  oracles.hpp
range_proof/iop/utilities/: batching.cpp  batching.hpp  batching.tcc  query_positions.hpp  query_positions.tcc
range_proof/protocols/ldt/: ldt_reducer.cpp  ldt_reducer.hpp  ldt_reducer.tcc  ldt_reducer_aux.hpp  ldt_reducer_aux.tcc  multi_ldt_base.hpp
range_proof/protocols/ldt/fri/: fri_aux.hpp  fri_aux.tcc  fri_ldt.hpp  fri_ldt.tcc  localizer_polynomial.hpp  localizer_polynomial.tcc
range_proof/tests/: test_fri.cpp  test_merkleTree.cpp  test_payment_check.cpp  test_rangeproof.cpp  test_rangeproof_arbitrary.cpp  test_rangeproof_backup.cpp  test_rangeproof_proveable.cpp
